@@ -1,5 +1,11 @@
 2010-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* python/mushin/maemo/new.py:
+	  New window now allows selecting contexts/projects and setting due
+	  date.
+
+2010-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* python/mushin/model/couch.py:
 	  Set default type of a Thing.
 
